syntax = "proto3";
package box;
option go_package = "./pb";

import "google/protobuf/timestamp.proto";

message SignedTransport {
  bytes Data = 1;
  bytes Signature = 2;
  Metadata Metadata = 3;
  bytes Padding = 4;
  uint32 Path = 5;
  optional bytes NextKey = 6;
}

message Metadata {
  string ID = 1;
  google.protobuf.Timestamp Timestamp = 2;
  uint64 Sequence = 3;
}